<resources>
    <string name="app_name">Quizmodoro</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_history">History</string>
    <string name="menu_settings">Settings</string>

    <string name="start_timer">Start.</string>
    <string name="start_button">Start session</string>
    <string name="stop_button">Stop</string>
    <string name="resume_button">Resume</string>
    <string name="reset_button">Reset</string>

    <string name="timer_value">00:00</string>
    <string name="locked_timer_value">00:00</string>
    <string name="locked_timer_message1">Your phone is locked!</string>
    <string name="locked_timer_message2">go revise again.</string>

    <string name="results_marks">10/10</string>
    <string name="passed_remarks">You passed!</string>
    <string name="failed_remarks">You failed!</string>
    <string name="continue_session">Start session</string>
    <string name="continue_to_lock">Continue to Lock</string>

    <string name="session_end">Your session has ended.</string>
    <string name="enter_notes_extended">Enter your notes for quiz
    questions to be generated.</string>
    <string name="max_num_pages">Maximum number of images: 16</string>
    <string name="upload_button">Upload Images</string>

    <string name="accessibility_service">Hello I need your access</string>

    <string name="generating_quiz">Generating quiz…</string>
    <string name="generating_cd">Loading page while Bard is creating the quiz</string>


    <string name="passed">passed_results</string>
    <string name="failed">failed_results</string>

</resources>