<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/locked_time_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center"
        android:text="@string/locked_timer_value"
        android:textColor="@color/black"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/locked_timer_message1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/locked_timer_message1"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/locked_timer_message2"
        app:layout_constraintEnd_toEndOf="@+id/locked_time_left"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="@+id/locked_time_left" />

    <TextView
        android:id="@+id/locked_timer_message2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/locked_timer_message2"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/locked_timer_message1"
        app:layout_constraintStart_toStartOf="@+id/locked_timer_message1"
        app:layout_constraintTop_toBottomOf="@+id/locked_time_left" />


</androidx.constraintlayout.widget.ConstraintLayout>