<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/rounded_rectangle"
        android:layout_width="411dp"
        android:layout_height="320dp"
        android:background="@drawable/rounded_rectangle"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/border_rectangle"
        android:layout_width="350dp"
        android:layout_height="310dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/rectangle_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/results"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="@string/results_marks"
        android:textSize="70sp"
        android:textStyle="bold"
        android:textColor="@color/purple_700"
        android:fontFamily="@font/poppins_medium"
        app:layout_constraintEnd_toEndOf="@+id/border_rectangle"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="@+id/border_rectangle"
        app:layout_constraintTop_toTopOf="@+id/border_rectangle" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/passed_remarks"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/border_rectangle"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="@+id/border_rectangle"
        app:layout_constraintTop_toTopOf="@+id/border_rectangle" />

    <Button
        android:layout_width="180dp"
        android:layout_height="35dp"
        android:background="@drawable/purple_button"
        android:text="@string/continue_session"
        app:layout_constraintBottom_toBottomOf="@+id/border_rectangle"
        app:layout_constraintEnd_toEndOf="@+id/border_rectangle"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="@+id/border_rectangle"
        app:layout_constraintTop_toTopOf="@+id/border_rectangle"
        app:layout_constraintVertical_bias="0.858" />




    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/circle_button"
        android:gravity="center"
        android:text="4"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/border_rectangle" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/circle_button"
        android:gravity="center"
        android:text="8"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/border_rectangle" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/circle_button"
        android:gravity="center"
        android:text="9"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/border_rectangle" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/circle_button"
        android:gravity="center"
        android:text="3"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/border_rectangle" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/circle_button"
        android:gravity="center"
        android:text="7"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/border_rectangle" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/circle_button"
        android:gravity="center"
        android:text="5"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/border_rectangle" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/circle_button"
        android:gravity="center"
        android:text="10"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/border_rectangle"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/border_rectangle" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/circle_button"
        android:gravity="center"
        android:text="6"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/border_rectangle" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/circle_button"
        android:gravity="center"
        android:text="2"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/border_rectangle" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/circle_button"
        android:gravity="center"
        android:text="1"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/border_rectangle"
        app:layout_constraintTop_toBottomOf="@+id/border_rectangle" />


</androidx.constraintlayout.widget.ConstraintLayout>