<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/rounded_rectangle"
        android:layout_width="411dp"
        android:layout_height="320dp"
        android:background="@drawable/rounded_rectangle"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/border_rectangle"
        android:layout_width="350dp"
        android:layout_height="310dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/rectangle_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/failed_results"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="@string/results_marks"
        android:textSize="70sp"
        android:textStyle="bold"
        android:textColor="@color/purple_700"
        android:fontFamily="@font/poppins_medium"
        app:layout_constraintEnd_toEndOf="@+id/border_rectangle"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="@+id/border_rectangle"
        app:layout_constraintTop_toTopOf="@+id/border_rectangle" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/failed_remarks"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/border_rectangle"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="@+id/border_rectangle"
        app:layout_constraintTop_toTopOf="@+id/border_rectangle" />

    <Button
        android:id="@+id/get_locked"
        android:layout_width="180dp"
        android:layout_height="35dp"
        android:background="@drawable/purple_button"
        android:text="@string/continue_to_lock"
        app:layout_constraintBottom_toBottomOf="@+id/border_rectangle"
        app:layout_constraintEnd_toEndOf="@+id/border_rectangle"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="@+id/border_rectangle"
        app:layout_constraintTop_toTopOf="@+id/border_rectangle"
        app:layout_constraintVertical_bias="0.858" />




    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/circle_button"
        android:gravity="center"
        android:text="4"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/border_rectangle" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/circle_button"
        android:gravity="center"
        android:text="8"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/border_rectangle" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/circle_button"
        android:gravity="center"
        android:text="9"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/border_rectangle" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/circle_button"
        android:gravity="center"
        android:text="3"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/border_rectangle" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/circle_button"
        android:gravity="center"
        android:text="7"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/border_rectangle" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/circle_button"
        android:gravity="center"
        android:text="5"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/border_rectangle" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/circle_button"
        android:gravity="center"
        android:text="10"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/border_rectangle"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/border_rectangle" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/circle_button"
        android:gravity="center"
        android:text="6"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/border_rectangle" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/circle_button"
        android:gravity="center"
        android:text="2"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/border_rectangle" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/circle_button"
        android:gravity="center"
        android:text="1"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/border_rectangle"
        app:layout_constraintTop_toBottomOf="@+id/border_rectangle" />


    <TextView
        android:id="@+id/tv_question"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:layout_marginTop="44dp"
        android:gravity="center"
        android:text="Question"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tv_optionOne"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.303"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/border_rectangle"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_optionOne"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="76dp"
        android:background="@drawable/default_option_border"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:padding="15dp"
        android:text="Option 1"
        android:textColor="#7A8089"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tv_optionThree"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_optionFour"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/default_option_border"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:padding="15dp"
        android:text="Option 4"
        android:textColor="#7A8089"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_optionThree"
        app:layout_constraintVertical_bias="0.466" />

    <TextView
        android:id="@+id/tv_optionThree"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:background="@drawable/default_option_border"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:padding="15dp"
        android:text="Option 3"
        android:textColor="#7A8089"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_optionTwo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/default_option_border"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:padding="15dp"
        android:text="Option 2"
        android:textColor="#7A8089"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tv_optionThree"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_optionOne" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Next"
        app:layout_constraintStart_toEndOf="@+id/tv_optionFour"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/tv_optionFour"
        app:layout_constraintTop_toTopOf="@+id/tv_optionFour"
        app:layout_constraintWidth_percent="0.3" />

    <Button
        android:id="@+id/btnPrevious"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Previous"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_optionFour"
        app:layout_constraintBottom_toBottomOf="@+id/tv_optionFour"
        app:layout_constraintTop_toTopOf="@+id/tv_optionFour"
        app:layout_constraintWidth_percent="0.3" />



</androidx.constraintlayout.widget.ConstraintLayout>